32 - Add Stop Markers Visibility Toggle (#36)
Added using react-toggle. Some CSS was also added to
ensure consistent spacing. As well, State was renamed
to Time.

Resolves https://github.com/trynmaps/tryn-react/issues/32

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -63,8 +63,12 @@ body {
 }
 
 .routes-header {
-  margin-top: 10px;
+  margin-top: 15px;
   color: #FFFFFF;
+}
+
+.stops-toggle {
+  margin-bottom: -8px;
 }
 
 ul.route-checkboxes {
